add_subdirectory(concepts)
#add_subdirectory(cpp_modules)
#add_subdirectory(ranges_and_views)
add_subdirectory(format)

add_executable(cpp_new_mix1 mix_1.cpp)
target_link_libraries(cpp_new_mix1 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_mix2 mix_2.cpp)
target_link_libraries(cpp_new_mix2 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_evaluation_order_4 evaluation_order_4.cpp)
target_link_libraries(cpp_new_evaluation_order_4 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_structured_bindings_5 structured_bindings_5.cpp)
target_link_libraries(cpp_new_structured_bindings_5 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_variable_template_6 variable_template_6.cpp)
target_link_libraries(cpp_new_variable_template_6 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings Boost::headers)

add_executable(cpp_new_variable_template_7 variable_template_7.cpp)
target_link_libraries(cpp_new_variable_template_7 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_optional_8 std_optional_8.cpp)
target_link_libraries(cpp_new_std_optional_8 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_variant_9 std_variant_9.cpp)
target_link_libraries(cpp_new_std_variant_9 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_variant_10 std_variant_10.cpp)
target_link_libraries(cpp_new_std_variant_10 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_variant_11 std_variant_11.cpp)
target_link_libraries(cpp_new_std_variant_11 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_variant_12 std_variant_12.cpp)
target_link_libraries(cpp_new_std_variant_12 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_variant_13 std_variant_13.cpp)
target_link_libraries(cpp_new_std_variant_13 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_inline_variables_16 inline_variables_16.cpp inline_variables.cpp)
target_link_libraries(cpp_new_inline_variables_16 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_if_constexpr_20 if_constexpr_20.cpp)
target_link_libraries(cpp_new_if_constexpr_20 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_integer_sequence_31 integer_sequence_31.cpp)
target_link_libraries(cpp_new_integer_sequence_31 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)


add_executable(cpp_new_spaceship_operator_32 spaceship_operator_32.cpp)
target_link_libraries(cpp_new_spaceship_operator_32 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_spaceship_operator_33 spaceship_operator_33.cpp)
target_link_libraries(cpp_new_spaceship_operator_33 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_spaceship_operator_34 spaceship_operator_34.cpp)
target_link_libraries(cpp_new_spaceship_operator_34 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)


add_executable(cpp_new_jthread_56 jthread_56.cpp)
target_link_libraries(cpp_new_jthread_56 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_57 jthread_57.cpp)
target_link_libraries(cpp_new_jthread_57 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_58 jthread_58.cpp)
target_link_libraries(cpp_new_jthread_58 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_59 jthread_59.cpp)
target_link_libraries(cpp_new_jthread_59 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_60 jthread_60.cpp)
target_link_libraries(cpp_new_jthread_60 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_stop_source_stop_token_61 stop_source_stop_token_61.cpp)
target_link_libraries(cpp_new_stop_source_stop_token_61 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_62 jthread_62.cpp)
target_link_libraries(cpp_new_jthread_62 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_jthread_62_a jthread_62_a.cpp)
target_link_libraries(cpp_new_jthread_62_a PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_66 coroutine_66.cpp)
target_link_libraries(cpp_coroutines_66 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_67 coroutine_67.cpp)
target_link_libraries(cpp_coroutines_67 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_69 coroutine_69.cpp)
target_link_libraries(cpp_coroutines_69 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_70 coroutine_70.cpp)
target_link_libraries(cpp_coroutines_70 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_71 coroutine_71.cpp)
target_link_libraries(cpp_coroutines_71 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_73 coroutine_73.cpp)
target_link_libraries(cpp_coroutines_73 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_74 coroutine_74.cpp)
target_link_libraries(cpp_coroutines_74 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_coroutines_66_delete coroutine_66_delete.cpp)
target_link_libraries(cpp_coroutines_66_delete PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_lambda_with_template_parameters_76 lambda_with_template_parameters_76.cpp)
target_link_libraries(cpp_lambda_with_template_parameters_76 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_lambda_with_template_parameters_77 lambda_with_template_parameters_77.cpp)
target_link_libraries(cpp_lambda_with_template_parameters_77 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_lambda_with_template_parameters_78 lambda_with_template_parameters_78.cpp)
target_link_libraries(cpp_lambda_with_template_parameters_78 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_lambda_with_template_parameters_79 lambda_with_template_parameters_79.cpp)
target_link_libraries(cpp_lambda_with_template_parameters_79 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_lambda_with_template_parameters_80 lambda_with_template_parameters_80.cpp)
target_link_libraries(cpp_lambda_with_template_parameters_80 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_constinit_consteval_81 constinit_consteval_81.cpp)
target_link_libraries(cpp_constinit_consteval_81 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_constinit_consteval_82 constinit_consteval_82.cpp)
target_link_libraries(cpp_constinit_consteval_82 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_throw throw.cpp)
target_link_libraries(cpp_new_throw PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(cpp_new_std_invoke_apply std_invoke_apply.cpp)
target_link_libraries(cpp_new_std_invoke_apply PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options ${PROJECT_NAME_LOWERCASE}_project_warnings)


