add_executable(multiple_inheritance_1 1.cpp)
target_link_libraries(multiple_inheritance_1 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_2 2.cpp)
target_link_libraries(multiple_inheritance_2 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_2a 2a.cpp)
target_link_libraries(multiple_inheritance_2a PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_3  3.cpp)
target_link_libraries(multiple_inheritance_3 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_4 4.cpp)
target_link_libraries(multiple_inheritance_4 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_5 5.cpp)
target_link_libraries(multiple_inheritance_5 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_5a 5a.cpp)
target_link_libraries(multiple_inheritance_5a PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_6 6.cpp)
target_link_libraries(multiple_inheritance_6 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_7 7.cpp)
target_link_libraries(multiple_inheritance_7 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_8 8.cpp)
target_link_libraries(multiple_inheritance_8 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_9 9.cpp)
target_link_libraries(multiple_inheritance_9 PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)

add_executable(multiple_inheritance_abc abc.cpp)
target_link_libraries(multiple_inheritance_abc PRIVATE ${PROJECT_NAME_LOWERCASE}_project_options  ${PROJECT_NAME_LOWERCASE}_project_warnings)
